--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 								<li><a href="https://twitter.com/orlandoburli" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://github.com/orlandoburli" class="icon brands fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/orlando-burli-junior" class="icon brands fa-linkedin">Linkedin</a></li>
+								<li><a href="https://medium.com/@orlando.burli" class="icon brands fa-medium">Medium</a></li>
 							</ul>
 						</footer>
 					</section>
